# cspell-ignore-words

./: README.md  bun.lockb  package.json
vscode_extension/: README.md  bun.lockb  package.json
words_generators/: .gitignore  README.md  pyproject.toml
words_generators/_words/: python.txt
words_generators/src/: generate.py  get_cspell_diff.py  utils.py
words_generators/src/generators/: __init__.py  python.py
